
syntax = "proto3";
package cacti.satp.v02;

import "cacti/satp/v02/common/message.proto";

enum STATUS {
  STATUS_UNSPECIFIED = 0;
  STATUS_ACCEPTED = 1;
  STATUS_REJECTED = 2;
}

message NewSessionRequestMessage {
  string session_id = 1;
  string context_id = 2;
  string client_transfer_number = 3;
  string sender_gateway_network_id = 4;
  string recipient_gateway_network_id = 5;
  string gateway_id = 6; //TODO FIX this change so it gets the gateway ID from channel
  string client_signature = 7;
  bool error = 8;
  cacti.satp.v02.common.Error error_code = 9;
  cacti.satp.v02.common.MessageType message_type = 10;
  string sender_gateway_network_type = 11;
}

message NewSessionResponseMessage {
  string session_id = 1;
  string context_id = 2;
  STATUS status = 3;
  string hash_previous_message = 4;
  string sender_gateway_network_id = 5;
  string recipient_gateway_network_id = 6;
  string server_signature = 7;
  bool error = 8;
  cacti.satp.v02.common.Error error_code = 9;
  cacti.satp.v02.common.MessageType message_type = 10;
  string receiver_gateway_network_type = 11;

}

message PreSATPTransferRequestMessage {
  string session_id = 1;
  string context_id = 2;
  string client_transfer_number = 3;
  string sender_gateway_network_id = 4;
  string recipient_gateway_network_id = 5;
  cacti.satp.v02.common.Asset sender_asset = 6;
  cacti.satp.v02.common.Asset receiver_asset = 7;
  cacti.satp.v02.common.WrapAssertionClaim wrap_assertion_claim = 8;
  string hash_previous_message = 9;
  string client_signature = 10;
  bool error = 11;
  cacti.satp.v02.common.Error error_code = 12;
  cacti.satp.v02.common.MessageType message_type = 13;
}

message PreSATPTransferResponseMessage {
  string session_id = 1;
  string context_id = 2;
  cacti.satp.v02.common.WrapAssertionClaim wrap_assertion_claim = 3;
  string hash_previous_message = 4;
  string recipient_token_id = 5;
  string server_signature = 6;
  bool error = 7;
  cacti.satp.v02.common.Error error_code = 8;
  cacti.satp.v02.common.MessageType message_type = 9;
}

message CheckRequest {
  string check = 1;
}

message CheckResponse {
  string check = 1;
}

service SatpStage0Service {
  rpc NewSession(NewSessionRequestMessage) returns (NewSessionResponseMessage) {}
  rpc PreSATPTransfer(PreSATPTransferRequestMessage) returns (PreSATPTransferResponseMessage) {}
  rpc Check(CheckRequest) returns (CheckResponse) {}
}